# devdocs-binance-spot-agent

./: .env.example  .gitignore  README.md  learning-plan.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: config.py  health.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/models/: __init__.py  base.py  factory.py  openai_compatible.py  types.py
app/schemas/: common.py  config.py
app/tools/: __init__.py  base.py  factory.py  types.py  web_fetch.py  web_search.py
docs/: day-1-checklist.md  tech-design-draft.md  week-1-breakdown.md  week-1-summary.md
scripts/: week1_demo.py
tests/: test_config.py  test_errors_and_middleware.py  test_health.py  test_model_factory.py  test_openai_compatible_client.py  test_tool_factory.py  test_web_fetch_tool.py  test_web_search_tool.py
